# LegalDocumentAnalyzer

./: .gitignore  README.md  docker-compose.yml
services/BlobStorageService/: blob_service.py  config.py  pyproject.toml
services/BlobStorageService/tests/: test_blob_service.py
services/DocumentProcessing/: chunking_service.py  config.py  document_classification_service.py  download_model.py  pyproject.toml  text_extraction_service.py
services/DocumentProcessing/repositories/: chunk_metadata_repository.py  text_extraction_metadata_repository.py
services/DocumentProcessing/tests/: __init__.py  test_chunking.py  test_classification.py
services/DocumentService/: document_service.py  pyproject.toml
services/DocumentService/repositories/: document_history_repository.py  document_metadata_repository.py  document_repository.py
services/TenantService/: config.py  pyproject.toml  run_tests.py  tenant_service.py
services/TenantService/repositories/: tenant_repository.py
services/TenantService/tests/: test_tenant_integration.py
services/VectorDbService/: config.py  pyproject.toml  vector_service.py
shared/: document_state_machine.py
workflows/: README.md  __init__.py  config.py  pyproject.toml  worker.py
workflows/activities/: __init__.py  document_activities.py
workflows/factories/: __init__.py  service_factory.py
workflows/workflows/: __init__.py  document_processing_workflow.py
